# temperatureForecaster

./: .dockerignore  .dvcignore  .gitignore  Dockerfile  LENDAVA.csv  PTUJ_2.csv  README.md  clean_ptuj.py  data.dvc  dvc.yaml  other_scaler.pkl  params.yaml  pyproject.toml  railway.toml  temp_scaler.pkl
.dvc/: config
.github/workflows/: deploy.yml  fetch_and_train.yml  fetch_data.yml  fetch_only.yml  to_supabase.yml
data/preprocessed/temp/: BOVEC.csv  CELJE-MEDLOG.csv  CELJE.csv  CRNOMELJ.csv  LENDAVA.csv  MEZICA.csv  PTUJ.csv  ROGLA.csv
data/raw/temp/: temp_data_BOVEC.xml  temp_data_CELJE.xml  temp_data_CRNOMELJ.xml  temp_data_LENDAVA.xml  temp_data_PTUJ.xml
gx/: data_source_config.ipynb  great_expectations.yml  run_validation.py  validate_data.py
gx/checkpoints/: temperature_checkpoint.yml
gx/expectations/: .ge_store_backend_id  temperature_suite.json
gx/uncommitted_backup/: config_variables.yml
gx/uncommitted_backup/data_docs/local_site/: index.html
gx/uncommitted_backup/data_docs/local_site/expectations/: temperature_suite.html
gx/uncommitted_backup/validations/: .ge_store_backend_id
gx/uncommitted_backup/validations/temperature_suite/__none__/20250504T192354.695456Z/: temperature-temperature_data-station_ROGLA.json
gx/uncommitted_backup/validations/temperature_suite/__none__/20250504T203457.092964Z/: temperature-temperature_data-station_ROGLA.json
gx/uncommitted_backup/validations/temperature_suite/__none__/20250517T202716.411480Z/: temperature-temperature_data-station_ROGLA.json
mlruns/0/: meta.yaml
models/BOVEC/: temperature_forecaster_BOVEC_2025-06-02_17-32.pt
models/CELJE/: temperature_forecaster_CELJE_2025-06-02_17-25.pt
models/CRNOMELJ/: temperature_forecaster_CRNOMELJ_2025-06-02_17-29.pt
models/LENDAVA/: temperature_forecaster_LENDAVA_2025-06-02_18-01.pt
models/MEZICA/: temperature_forecaster_MEZICA_2025-06-02_17-36.pt
models/PTUJ/: temperature_forecaster_PTUJ_2025-06-02_17-21.pt
models/ROGLA/: temperature_forecaster_ROGLA_2025-06-02_17-46.pt
src/: serve.py
src/api/: .env  connect_supabase.py  evaluate.py  middleware.py  serve.py  station.py  supabase_client.py  test_report.py  validation_report.py  weather.py
src/data/: fetch_data_and_save_to_supabase.py  fetch_temp_data.py  preprocess_temp_data.py  save_to_supabase.py  test_data.py
src/frontend/src/: App.tsx
src/models/: load_models.ipynb  model.py  other_scaler.pkl  preprocess.py  promote_models_to_production.py  temp_scaler.pkl  temperature_forecaster.pt  train.ipynb  train.py
src/models/mlruns/0/: meta.yaml
static/validation/gx/: data_source_config.ipynb  validate_data.py
(+5 files in other folders)
