[project]
name = "iis-temperature-forecaster"
version = "0.1.0"
description = "Temperature forecaster intelligent system"
authors = [
    {name = "JakobOpresnik",email = "jakob.opresnik@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy (>=1.2.4,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "lxml (>=5.3.1,<6.0.0)",
    "pyaml (>=25.1.0,<26.0.0)",
    "great-expectations (==0.18.21)",
    "evidently (>=0.7.5,<0.8.0)",
    "torch (>=2.7.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "optuna (>=4.3.0,<5.0.0)",
    "mlflow (>=2.22.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"