[tool.poetry]
name = "iis-temperature-forecaster"
version = "0.1.0"
description = "Temperature forecaster intelligent system"
authors = ["JakobOpresnik <jakob.opresnik@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = ">=1.2.4,<2.0.0"
pandas = ">=2.2.3,<3.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
requests = ">=2.32.3,<3.0.0"
lxml = ">=5.3.1,<6.0.0"
pyaml = ">=25.1.0,<26.0.0"
great-expectations = { version = "==0.18.21", optional = true }
evidently = { version = ">=0.7.5,<0.8.0", optional = true }
torch = { version = ">=2.7.0,<3.0.0", extras = ["cpu"] }
matplotlib = { version = ">=3.10.3,<4.0.0", extras = ["base"] }
mlflow = ">=2.22.0,<3.0.0"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.3,<0.35.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
full = ["great-expectations", "evidently"]
